# desertcharge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 0001_initial.py  0002_tract_centroid.py
api/src/desertcharge/: __init__.py  config.py  db.py  h3grid.py  models.py  queries.py  region.py  scoring.py
api/src/desertcharge/api/: __init__.py  app.py  deps.py  geocode.py  read.py  route.py  routes.py  schemas.py
api/src/desertcharge/grid/: __init__.py  best_sites.py  build.py  demand.py  export.py  run.py  supply.py
api/src/desertcharge/ingest/: __init__.py  census.py  census_load.py  census_run.py  load.py  merge.py  nrel.py  openchargemap.py  records.py  run.py
api/tests/: conftest.py  test_api.py  test_census.py  test_census_load.py  test_geocode.py  test_grid_best_sites.py  test_grid_build.py  test_grid_demand.py  test_grid_export.py  test_h3grid.py  test_load.py  test_merge.py  test_models.py  test_nrel.py  test_openchargemap.py  test_queries.py  test_records.py  test_route.py  test_run.py  test_scoring.py
api/tests/fixtures/: nrel_sample.json  ocm_sample.json  tiger_centroids.json  tiger_population.json
docs/design/: design-tokens.md
docs/superpowers/plans/: 2026-07-16-phase-5-http-api.md  (+4 more)
web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+24 files in other folders)
